# rules_remotivelabs

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
docs/: BUILD.bazel
examples/remotive_topology/: BUILD.bazel  MODULE.bazel  README.md  remotive_topology_test.sh
examples/remotive_topology/topology/: requirements.txt
examples/remotive_topology/topology/bcm/: __main__.py
examples/remotive_topology/topology/instances/: main.instance.yaml
examples/remotive_topology/topology/models/: bcm.instance.yaml
examples/remotive_topology/topology/platform/databases/: driver_can.dbc
examples/remotive_topology/topology/tests/: conftest.py  test_turnlight.py  tester.instance.yaml
remotivelabs/: BUILD.bazel  extensions.bzl
remotivelabs/private/remotive_topology/: BUILD.bazel  remotive_topology_BUILD.bazel.tpl  remotive_topology_repo.bzl  topology_bazel_shim.sh.tpl  topology_toolchain_BLOCK.bazel.tpl  topology_toolchains_hub.bzl  topology_toolchains_hub_BUILD.bazel.tpl  versions.bzl
remotivelabs/rules/: BUILD.bazel  remotive_topology.bzl
remotivelabs/toolchains/remotive_topology/: BUILD.bazel  defs.bzl
tests/: BUILD.bazel
tests/fixtures/topology/: Dockerfile
tests/fixtures/topology/platform/: topology.platform.yaml
tests/fixtures/topology/platform/databases/: body_can.dbc
tests/fixtures/topology/tests/: tester.instance.yaml
