load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "remotive_topology_bzl",
    srcs = ["remotive_topology.bzl"],
    visibility = ["//visibility:public"],
)

# Let Stardoc (//docs) read the source as its `input`.
exports_files(["remotive_topology.bzl"], visibility = ["//docs:__pkg__"])
