load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "remotive_topology_repo.bzl",
    "remotive_topology_BUILD.bazel.tpl",
    "topology_bazel_shim.sh.tpl",
    "topology_toolchains_hub.bzl",
    "topology_toolchains_hub_BUILD.bazel.tpl",
    "topology_toolchain_BLOCK.bazel.tpl",
])

# The private Starlark that `//remotivelabs:extensions.bzl` loads. Exposed as a
# bzl_library so Stardoc (//docs) can resolve the extension's load graph.
bzl_library(
    name = "bzl_srcs",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)
