load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)

# Let Stardoc (//docs) read the source as its `input`.
exports_files(["defs.bzl"], visibility = ["//docs:__pkg__"])
